<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TheFoodHouse_Client</string>
    <string name="Slogan">No matter where you are: whether you are at home, or in the office, or in the beach - we will find you and we will feed you</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="menu">Menu</string>
    <string name="sign_out">Sign out</string>
    <string name="name_of_menu">Name of Menu</string>
    <string name="name_of_food">Name of Food</string>
    <string name="food_name">Food Name</string>
    <string name="food_price">Food Price</string>
    <string name="todo">TODO</string>
    <string name="description">Description</string>
    <string name="_10_000">$10,000</string>
    <string name="total">Total $:</string>
    <string name="place_order">Place This Order</string>
    <string name="_2">2</string>
    <string name="_100_000">100,000</string>
    <string name="status">Status</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="_111111">111111</string>
    <string name="map_api_key">AIzaSyCy-VFxchcXoU9y6_AzKY5XJW_5a8o9pmU</string>
    <string name="delete">Delete</string>
    <string name="_100">100</string>
    <string name="food_01">Food 01</string>
    <string name="thank_you">Thank You</string>
    <string name="ok">OK</string>
    <string name="your_cart_is_empty">Your Cart Is Empty</string>
    <string name="add_items_to_it_now">Add Items to it now?</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_order_was_successfully">Your order was successfully</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="on_more_step">On More Step</string>

</resources>
