<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:whilu="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo_eat_it"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txtSlogan"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Slogan"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.github.whilu.library.CustomRippleButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signup"
            android:layout_margin="5dp"
            whilu:ripple_duration="250"
            whilu:shape_type="rectangle"
            android:textColor="@android:color/background_dark"
            whilu:round_radius="5dp"
            whilu:unpressed_color="@color/btnSignUp"
            />

        <com.github.whilu.library.CustomRippleButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signin"
            android:layout_margin="5dp"
            whilu:ripple_duration="250"
            whilu:shape_type="rectangle"
            android:textColor="@android:color/background_dark"
            whilu:unpressed_color="@color/btnSignActive"
            whilu:round_radius="5dp" />
    </LinearLayout>

</RelativeLayout>