<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp"
        android:src="@drawable/ic_shopping_cart_black_24dp" />

    <TextView
        android:id="@+id/OrderSuccessfully"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginHorizontal="32dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/your_cart_is_empty"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/thank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/OrderSuccessfully"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:text="@string/add_items_to_it_now"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btnStartShopping"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thank"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="32dp"
        android:text="@string/start_shopping"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:theme="@style/AppTheme.ButtonSignIn" />
</RelativeLayout>