<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="8dp"
    android:background="@android:color/transparent"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/food_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:text="#"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,UnknownIdInLayout" />

                <TextView
                    android:id="@+id/order_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_111111"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="UnknownIdInLayout" />

            </LinearLayout>

            <TextView
                android:id="@+id/order_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/linearId"
                android:layout_marginStart="10dp"
                android:text="@string/status"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/order_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/order_status"
                android:layout_marginStart="10dp"
                android:text="@string/phone"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/order_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/order_phone"
                android:layout_marginStart="10dp"
                android:text="@string/address"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/order_address"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_attach_money_black_24dp" />

                <TextView
                    android:id="@+id/order_total"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_111111"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="UnknownIdInLayout" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>